# sentimentexplorer

./: Dockerfile.api  Dockerfile.app  LICENSE  README.md  docker-compose.yml
api/: app.py  pyproject.toml
api/ai/: __init__.py  model_loader.py
api/models/: __init__.py  requests.py
api/routes/: predict.py
api/test/: predict_test.py
app/: app.py  pyproject.toml
app/components/: __init__.py  input.py  main.py  news.py
app/notebooks/: __init__.py  sentiment_analysis.py
